--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "homepage": "https://github.com/gertqin/vuex-class-modules#readme",
   "devDependencies": {
     "@types/jest": "^23.3.9",
+    "@types/webpack-env": "^1.13.6",
     "css-loader": "^1.0.1",
     "jest": "^23.6.0",
     "ts-jest": "^23.10.5",
