--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "test": "jest --config jestconfig.json",
-    "build": "tsc",
+    "build": "rollup -c rollup.config.js; tsc --emitDeclarationOnly",
     "lint": "tslint -p tsconfig.json --fix",
     "example": "npm run build && webpack --config ./example/webpack.config.js",
     "prepare": "npm run build",
@@ -41,8 +41,14 @@
     "@types/webpack-env": "^1.13.9",
     "css-loader": "^3.2.0",
     "jest": "^24.9.0",
+    "rollup": "^1.25.2",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^1.0.1",
+    "rollup-plugin-typescript": "^1.0.1",
     "ts-jest": "^24.1.0",
     "ts-loader": "^6.2.0",
+    "tslib": "^1.10.0",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
