--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
   },
   "homepage": "https://github.com/gertqin/vuex-class-modules#readme",
   "devDependencies": {
-    "@types/jest": "^24.0.18",
+    "@types/node": "12.12.2",
+    "@types/jest": "^26.0.14",
     "@types/webpack-env": "^1.13.9",
     "css-loader": "^3.2.0",
-    "jest": "^24.9.0",
-    "ts-jest": "^24.1.0",
+    "jest": "^26.4.0",
+    "ts-jest": "^26.4.0",
     "ts-loader": "^6.2.0",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
@@ -52,7 +53,7 @@
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.1",
-    "webpack": "^4.41.1",
-    "webpack-cli": "^3.3.9"
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   }
 }
