--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   ],
   "scripts": {
     "test": "jest --config jestconfig.json",
-    "build": "npm run build:es2015 && npm run build:commonjs",
-    "build:es2015": "tsc",
-    "build:commonjs": "tsc -m commonjs --outDir ./commonjs",
+    "build": "npm run build:esnext && npm run build:commonjs",
+    "build:esnext": "tsc",
+    "build:commonjs": "tsc -m commonjs --module esnext --outDir ./commonjs",
     "lint": "tslint -p tsconfig.json --fix",
     "example": "npm run build && webpack --config ./example/webpack.config.js",
     "prepare": "npm run build",
@@ -46,8 +46,8 @@
   },
   "homepage": "https://github.com/gertqin/vuex-class-modules#readme",
   "devDependencies": {
-    "@types/node": "12.12.2",
     "@types/jest": "^26.0.14",
+    "@types/node": "12.12.2",
     "@types/webpack-env": "^1.13.9",
     "css-loader": "^3.2.0",
     "jest": "^26.4.0",
@@ -57,6 +57,7 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.8.4",
+    "vite": "^2.0.5",
     "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
     "vue-loader": "^15.7.0",
