--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     ".": {
       "require": "./commonjs/index.js",
       "default": "./lib/index.js"
-    }
+    },
+    "./package.json": "./package.json"
   },
   "types": "lib/index.d.ts",
   "files": [
