--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vuex-class-modules",
-  "version": "1.3.0",
+  "name": "@skryu/vuex-class-modules",
+  "version": "1.4.0",
   "description": "Typescript class decorators for class-style vuex modules.",
   "main": "commonjs/index.js",
   "module": "lib/index.js",
